[gd_scene load_steps=9 format=3 uid="uid://qmljjej8x66a"]

[ext_resource type="Texture2D" uid="uid://bsc51g8so4dn3" path="res://textures/items/mouse.png" id="1_lvwyj"]
[ext_resource type="Script" path="res://scripts/items/mouse.gd" id="1_ui7xw"]
[ext_resource type="Texture2D" uid="uid://bnyrvid1fxlf6" path="res://textures/items/circle_marker.png" id="3_x4e1u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gk3uh"]
radius = 24.0
height = 96.87

[sub_resource type="CircleShape2D" id="CircleShape2D_lyb6v"]
radius = 500.0

[sub_resource type="Animation" id="Animation_762wk"]
resource_name = "spin"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_h6h03"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xb4x7"]
_data = {
"RESET": SubResource("Animation_h6h03"),
"spin": SubResource("Animation_762wk")
}

[node name="Mouse" type="CharacterBody2D"]
script = ExtResource("1_ui7xw")
item = true
usage = 0.25

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_lvwyj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gk3uh")

[node name="AttractArea" type="Area2D" parent="." groups=["mouse"]]
modulate = Color(0, 1, 0, 1)
show_behind_parent = true
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttractArea"]
shape = SubResource("CircleShape2D_lyb6v")

[node name="Sprite2D" type="Sprite2D" parent="AttractArea"]
texture = ExtResource("3_x4e1u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttractArea"]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_xb4x7")
}

[node name="Timers" type="Node" parent="."]

[node name="MoveTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="MoveWaitTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 1.5
one_shot = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCastTop" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, -64)

[node name="RayCastBottom" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 64)

[node name="RayCastLeft" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-64, 0)

[node name="RayCastRight" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(64, 0)

[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="Timers/MoveWaitTimer" to="." method="_on_move_wait_timer_timeout"]
